# decathlon_challenge

./: README.md  pyproject.toml
data/inputs/: bu_feat.csv
data/outputs/: predictions.csv
deployment_pipeline/: decathlon_pipeline.py  eval_trained_model.yaml  make_prediction.yaml  metadata.sqlite  preprocess_serving_data.yaml  process_data.yaml  read_csv.yaml  split_data.yaml  train_model.yaml
getting_started/: 01_Modeling.ipynb  02_ML_pipeline.ipynb
trained_models/FBProphet/: model_department_117_business_unit_1  model_department_117_business_unit_10  model_department_117_business_unit_100  model_department_117_business_unit_1015  model_department_117_business_unit_1067  model_department_117_business_unit_109  model_department_117_business_unit_11  model_department_117_business_unit_110  model_department_117_business_unit_1106  model_department_117_business_unit_1107  model_department_117_business_unit_1108  model_department_117_business_unit_1109  model_department_117_business_unit_1110  model_department_117_business_unit_1111  model_department_117_business_unit_1112  model_department_117_business_unit_1113  model_department_117_business_unit_1115  model_department_117_business_unit_1116  model_department_117_business_unit_1118  model_department_117_business_unit_1119  model_department_117_business_unit_1120  model_department_117_business_unit_1121  model_department_117_business_unit_1122  model_department_117_business_unit_1123  model_department_117_business_unit_1124  model_department_117_business_unit_1125  model_department_117_business_unit_1126  (+1243 more)
(+6 files in other folders)
