[tool.poetry]
name = "decathlon_challenge"
version = "0.1.0"
description = ""
authors = ["seifou <es_attoui@esi.dz>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
pandas = "^1.5.2"
shapely = "^2.0.0"
geopandas = "^0.12.2"
matplotlib = "^3.6.2"
plotly = "^5.11.0"
pandasql = "^0.7.3"
scikit-learn = "^1.2.0"
xgboost = "^1.7.2"
holidays = "^0.18"
workalendar = "^16.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
